server/k8s/base/01-api.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  type: LoadBalancer
  loadBalancerIP: 34.91.100.207
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: api-port-map
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: trace-together
          volumeMounts:
            - mountPath: /etc/firebase-key
              name: fireabase-key-volume
            - mountPath: /etc/firebase-config
              name: firebase-config-volume
          ports:
            - containerPort: 8080
              protocol: TCP
              name: api-port
      #          TODO: Requires grpc health protocol to be implemented
      #          readinessProbe:
      #            exec:
      #              command: ["/grpc_health_probe", "-addr=:8080"]
      #            initialDelaySeconds: 5
      #            periodSeconds: 5
      #            successThreshold: 1

      volumes:
        - name: firebase-config-volume
          configMap:
            name: firebase-config
        - name: fireabase-key-volume
          secret:
            secretName: firebase-key
