server/k8s/base/99-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: api
              servicePort: 80
